# ansible-role-miarecweb

./: .ansible-lint  .gitignore  CLAUDE.md  README.md  ansible.cfg  pyproject.toml
.github/workflows/: ci.yml
defaults/: main.yml
docs/: ci.md
docs/plans/2025-12-postgres-redis-tls/: draft_plan.md  initial_prompt.md  plan.md
docs/plans/2026-01-install-uv/: idea.md  plan.md  spec.md  uv_install.md
docs/plans/2026-01-install-with-uv/: idea.md  plan.md  (+4 more)
docs/prs/: pr_011_migrate_to_uv.md  pr_012_postgres_redis_tls.md  pr_014_install_uv.md  pr_015_rhel8_tests.md  pr_016_install_with_uv.md
handlers/: main.yml
meta/: main.yml
molecule/default/: README.md  apache.yml  converge.yml  molecule.yml  postgresql.yml  prepare.yml  python.yml  requirements-galaxy.yml  test-requirements.txt
molecule/stop_services_upgrade/: converge.yml  molecule.yml  prepare.yml
molecule/tls/: converge.yml  molecule.yml  prepare.yml
molecule/uv/: collections.yml  converge.yml  molecule.yml  prepare.yml
molecule/uv_upgrade/: converge.yml  molecule.yml  prepare.yml  requirements.yml
tasks/: apache.yml  celerybeat.yml  celeryd.yml  dependencies.yml  install_uv.yml  main.yml  miarecweb.yml  preflight.yml  upgrade_db.yml
templates/: apache-2.2-miarec.conf.j2  apache-2.4-miarec.conf.j2  apache-miarec-ssl.conf.j2  etc_default_celerybeat.j2  etc_default_celeryd.j2  etc_init.d_celerybeat.j2  etc_init.d_celeryd.j2  etc_logrotate.d_celery.j2  etc_systemd_system_celerybeat.service.j2  etc_systemd_system_celeryd.service.j2  etc_tmpfiles.d_celeryd.conf.j2
vars/: Debian.yml  RedHat.yml
(+14 files in other folders)
